@@ -12,7 +12,7 @@
     <!-- Must be set to zope2.Public.
          See http://www.openplans.org/projects/opencore/lists/opencore-dev/archive/2008/12/1229475623696/forum_view -->
     <require permission="zope2.Public"                   
-             attributes="setEngine pretty_date project_noun member_title" />
+             attributes="setEngine pretty_date project_noun member_title membership_synced_lists" />
   </content> 
 
 </configure>
